# suite2p

./: .codespellrc  .gitignore  .readthedocs.yaml  .readthedocs.yml  .style.yapf  .travis.yml  AGENTS.md  LICENCE  MANIFEST.in  README.md  app1.py  app1.py~  appgraph.py  celldetect.py  classifier.py  classifier0.npy  codecov.yml  conftest.py  cross_register_multiSession.ipynb  cross_register_multiSession_skimage.ipynb  db.npy  dcnv.py  environment.lock.yml  environment.yml  environment_dev.yml  environment_docs.yml  environment_old.yml  ex.txt  fig.py  gdrive-user-credentials.json.enc  gui.py  gui_data.txt  main.py  memoryTests.ipynb  mkdocs.yml  myutils.py  myutils2.py  nano.exe.stackdump  ops.npy  persp_transform.ipynb  (+18 more)
.devin/: wiki.json
.devon/: wiki.json
.dvc/: .gitignore  config  gc-readonly-service-account-creds-for-travis-dvc.p12  gdrive-user-credentials.json.enc
.dvc/creds/: suite2p-testdata-dvc-b0d23791539c.p12
.dvc/plots/: confusion.json  default.json  scatter.json
.dvc/tmp/: gdrive-user-credentials.json  suite2p-testdata-dvc-5392007c2234.p12  suite2p-testdata-dvc-5517915a909f.p12
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.md  documentation_issue.yml  feature_request.md  feature_request.yml  installation-issue.yml  installation-issues.md  installation_issue.yml
.github/workflows/: test_and_deploy.yml
.ipynb_checkpoints/: mariusTests-checkpoint.ipynb  spkdcnv-checkpoint.ipynb  testModel-checkpoint.ipynb  testRegisterBinary-checkpoint.ipynb  testRegistration-checkpoint.ipynb  trycelldetect-checkpoint.ipynb
aind-scripts/: CONVERSION_PLAN.md  batch_convert_aind_to_suite2p.sh  convert_aind_to_suite2p.py
benchmarks/: registration_metrics.py
classifiers/: classifier_user.npy
data/: .gitignore  test_data.dvc
data/test_data/: .gitignore  1plane1chan_F_plane0.npy.dvc  1plane1chan_Fneu_plane0.npy.dvc  1plane1chan_iscell_plane0.npy.dvc  1plane1chan_spks_plane0.npy.dvc  1plane1chan_stat_plane0.npy.dvc  2plane1chan_F_plane0.npy.dvc  2plane1chan_F_plane1.npy.dvc  2plane1chan_Fneu_plane0.npy.dvc  2plane1chan_Fneu_plane1.npy.dvc  2plane1chan_iscell_plane0.npy.dvc  2plane1chan_iscell_plane1.npy.dvc  2plane1chan_spks_plane0.npy.dvc  2plane1chan_spks_plane1.npy.dvc  2plane1chan_stat_plane0.npy.dvc  2plane1chan_stat_plane1.npy.dvc  2plane2chan_F_chan2_plane0.npy.dvc  2plane2chan_F_chan2_plane1.npy.dvc  2plane2chan_F_plane0.npy.dvc  2plane2chan_F_plane1.npy.dvc  2plane2chan_Fneu_chan2_plane0.npy.dvc  2plane2chan_Fneu_chan2_plane1.npy.dvc  2plane2chan_Fneu_plane0.npy.dvc  2plane2chan_Fneu_plane1.npy.dvc  2plane2chan_iscell_plane0.npy.dvc  2plane2chan_iscell_plane1.npy.dvc  2plane2chan_redcell_plane0.npy.dvc  2plane2chan_redcell_plane1.npy.dvc  2plane2chan_spks_plane0.npy.dvc  2plane2chan_spks_plane1.npy.dvc  2plane2chan_stat_plane0.npy.dvc  2plane2chan_stat_plane1.npy.dvc  input-scanimage.tif.dvc  input.h5.dvc  input.tif.dvc  input0.tif.dvc  input1.tif.dvc  input_1500.tif.dvc  testdvc.txt.dvc
docs/: FAQ.rst  Makefile  celldetection.rst  classification.md  conf.py  deconvolution.md  deconvolution.rst  dependencies.rst  developer_doc.md  developer_doc.rst  gui.md  gui.rst  index.md  index.rst  inputs.md  inputs.rst  installation.md  installation.rst  multiday.md  outputs.md  outputs.rst  parameters.md  registration.md  registration.rst  requirements.txt  roiextraction.md  settings.md  settings.rst
docs/api/: classification.md  extraction.md  gui.md  io.md  suite2p.extraction.rst  suite2p.io.rst  suite2p.registration.rst  suite2p.rst
docs/css/: API.css
docs/html/: index.html
docs/source/: conf.py  conf.py~  index.rst  suite2p.rst
envs/: suite2p_lin.yml  suite2p_lin_spec.txt
helpers/: loadFramesBuff.m  make_json_config.m  mesoscope_json_from_scanimage.m  nFramesTiff.m
jupyter/: Run Suite2p.ipynb  __main__.py  make_ops.ipynb  mariusTests.ipynb  memoryTests.ipynb  multiple_functional_channels.ipynb  run_pipeline.ipynb  run_pipeline_batch.ipynb  run_pipeline_sbx.ipynb  run_pipeline_tiffs_or_batch.ipynb  run_suite2p_colab_2021.ipynb  run_suite2p_colab_2023.ipynb  separate_multichannel_expt.ipynb  spkdcnv.ipynb  subsampleMovie.ipynb  testRegisterBinary.ipynb  testRegistration.ipynb  test_tiff_loader.ipynb  trycelldetect-MP.ipynb  trycelldetect.ipynb  view_neuropil_masks.ipynb
notebooks/: example_notebook.ipynb  example_run_suite2p_2026.ipynb  run_movie_avi_mp4.ipynb  run_twochan.ipynb
paper/: detect_benchmarks.py  detect_caiman.py  detect_f1_score.py  detection_figure.ipynb  fig_utils.py  figures.py  pipeline_figure.ipynb  reg_caiman.py  reg_fiola.py  reg_suite2p.py  reg_timing_jobs.py  registration_figure.ipynb
scripts/: README.MD  build_depgraph.bat  generate_test_data.py  instructions.md  make_tiff_scanimage_compatible.py  suite2p.dot  sute2p.dot
scripts/dependency_graph/: .gitignore  build_depgraph.bat  build_depgraph_cycles.bat
scripts/profiler/: profile_pipeline.bat  run_pipeline.py
src/suite2p/: __init__.py  __main__.py  run_s2p.py  version.py
suite2p/: LoadBinary.py  __init__.py  __main__.py  app.py  appex.py  appgraph.py  celldetect.py  celldetect2.py  chan2detect.py  classgui.py  classifier.py  classifier_stats.py  classifier_user.npy  cuda_utils.py  dcnv.py  debug_pipeline.py  default_ops.py  drawroi.py  fig.py  generate_settings_docs.py  gpu_utils.py  gui.py  gui2p.py  inputs.rst  listLR.py  loadmat.py  logger.py  memoryTests.ipynb  merge.py  mkdocs.yml  myutils2.py  nonrigid.py  parameters.py  pipeline_s2p.py  reggui.py  register.py  register2.py  regmetrics.py  roiextract.py  run_s2p.py  (+7 more)
suite2p.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
suite2p/aind-scripts/: CONVERSION_PLAN.md  convert_aind_to_suite2p.py
suite2p/classification/: __init__.py  classifier.py  classify.py
suite2p/classifiers/: classifier.npy  classifier_user.npy
suite2p/gui/: io.py  (+18 more)
suite2p_docs/: mkdocs.yml
testdata/: ops.npy
tests/: conftest.py  instructions.md  test_cli.py  test_gui_filter.py  test_import.py  test_io.py  test_pipeline.py  test_registration.py  test_version.py  utils.py
tutorial/: tutorial.md
(+551 files in other folders)
